# invok

./: .dockerignore  .gitignore  AUTOSCALING.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.cli  Makefile  PERSISTENCE.md  Readme.md  build_cli_docker.sh  docker-compose.yml  docker-wrapper.sh  test-deploy.sh
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: cli-release.yml  docker-build.yml  release-drafter.yml
cli/: Cargo.toml  Readme.md
cli/src/: auth.rs  host_manager.rs  main.rs  serverless_function.rs  utils.rs
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  invok-container-metrics.json
runtime/: AUTOSCALING.md  Cargo.toml  PERSISTENCE.md
runtime/src/core/: autoscaler.rs  builder.rs  container_manager.rs  integration.rs  logs.rs  metrics_client.rs  mod.rs  persistence.rs  runner.rs
runtime/src/shared/: error.rs  mod.rs  utils.rs
serverless_core/: Cargo.toml
serverless_core/src/: lifecycle_manager.rs
serverless_core/src/api_controller/: config.rs  mod.rs
serverless_core/src/api_controller/config/: function.rs  server.rs
serverless_core/src/api_controller/handlers/: functions.rs
serverless_core/src/db/: cache.rs  models.rs
serverless_core/src/lifecycle_manager/: deploy.rs  invoke.rs
serverless_core/src/utils/: utils.rs
shared_utils/src/: lib.rs
src/: main.rs
templates/: Cargo.toml
templates/src/: go_template.rs  lib.rs  nodejs_template.rs
templates/src/go/: Dockerfile  go.mod  handler.go  main.go
templates/src/nodejs/: Dockerfile  function.ts  server.ts
