[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["macros", "test-util", "full"]}
bollard = "0.18.1"
futures-util = "0.3.31"
tempfile = "3.15.0"
tar = "0.4.43"
shared_utils = { path = "../shared_utils" }
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
dashmap = "7.0.0-rc2"
redis = { version = "0.28.1", features = ["tokio-comp", "aio", "connection-manager"] }